--- a/exploding-kittens-frontend/src/app/globals.css
+++ b/exploding-kittens-frontend/src/app/globals.css
@@ -19,3 +19,13 @@
 body {
   color: rgb(var(--foreground-rgb));
 }
+
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
