--- a/exploding-kittens-frontend/src/app/globals.css
+++ b/exploding-kittens-frontend/src/app/globals.css
@@ -21,11 +21,11 @@ body {
 }
 
 .btn {
-  @apply font-bold py-2 px-4 rounded;
+  @apply font-bold py-2 px-4 rounded disabled:bg-slate-200 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none;
 }
 .btn-blue {
   @apply bg-blue-500 text-white;
 }
 .btn-blue:hover {
-  @apply bg-blue-700;
+  @apply bg-blue-700 disabled:bg-slate-200;
 }
